Tests/Error/Ordering/.build/logretryerror.pr
{
  "name": "LogRetryError",
  "description": "Maps the step to a variable assignment setting %order% to the string \u0022error\u0022.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %order% = \u0022error\u0022",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%order%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": "error",
              "type": "string"
            }
          ],
          "defaults": [
            {
              "name": "asdefault",
              "value": false,
              "type": "bool"
            }
          ],
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Error/Ordering/LogRetryError.goal",
  "prPath": "/Error/Ordering/.build/logretryerror.pr",
  "hash": "51313fa12d49b8619cb31583b870ffabe109bfdafe268ce0f17242a2064d6148",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}